# OperatingSystems

1assignment/: CMakeLists.txt  README.txt  main.cpp  test1.txt
1project/: CMakeLists.txt  README.txt  main.cpp
2assignment/: CMakeLists.txt  README  barrier.c  fork-join.c  rendezvous.c
2project/: 2project_lib.cpp  2project_lib.h  CMakeLists.txt  README.txt  main.cpp
3project/: 3project_lib.cpp  3project_lib.h  CMakeLists.txt  README.txt  main.cpp  mylist.cpp  mylist.h
4project/: 4project_lib.cpp  4project_lib.h  CMakeLists.txt  README.txt  main.cpp  mylist.cpp  mylist.h  outfile1.txt  outfile2.txt
